kubernetes/apps/observability/gatus/app/httproute.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: gatus-external
#   namespace: observability
# spec:
#   parentRefs:
#     - name: envoy-external
#       namespace: network
#       sectionName: https
#   hostnames:
#     - status.${SECRET_DOMAIN}
#     - gatus.${SECRET_DOMAIN}
#   rules:
#     - backendRefs:
#         - name: gatus
#           port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus-internal
  namespace: observability
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - status.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: gatus
          port: 80
